--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "release-major": "standard-version --release-as major",
     "release-minor": "standard-version --release-as minor",
     "release-patch": "standard-version --release-as patch",
-    "publish": "npm publish --access public"
+    "public": "npm publish --access public"
   },
   "bin": {
     "hero": "./src/hero.js"
